# aiSDR

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  Layout.jsx  LoadingIndicator.jsx  Sidebar.jsx
frontend/src/hooks/: useChat.js
frontend/src/pages/: ChatPage.jsx  ResearchPage.jsx
skills/company-research/: SKILL.md
skills/company-research/references/: data_sources.md
skills/email-composer/: SKILL.md
skills/email-composer/references/: templates.md
skills/lead-qualifier/: SKILL.md
skills/prospect-research/: SKILL.md
skills/prospect-research/references/: enrichment_guide.md
src/sdr_agent/: __init__.py  agent.py  config.py  main.py
src/sdr_agent/integrations/: __init__.py  email.py
src/sdr_agent/llm/: __init__.py  claude.py
src/sdr_agent/skills/: __init__.py  executor.py  loader.py
tests/: __init__.py  test_skill_loader.py
web/: __init__.py  app.py
web/routes/: __init__.py  chat.py  research.py
